 * [Uninstall-User](http://get-carbon.org/help/Uninstall-User.html) re-written to use .NET's `System.DirectoryServices.AccountManagement` API (introduced with .NET 3.5).
 * [Test-User](http://get-carbon.org/help/Test-User.html) re-written to use .NET's `System.DirectoryServices.AccountManagement` API (introduced with .NET 3.5).
 
# 1.6.1

## Bug Fixes

### Shares

 * Fixed [Install-SmbShare](http://get-carbon.org/help/Install-SmbShare.html) example to use correct syntax. [#111.](https://bitbucket.org/splatteredbits/carbon/issue/111)
 

 ## Enhancements

### IIS

 * Created [Join-IisVirtualPath](http://get-carbon.org/help/Join-IisVirtualPath.html) for joining paths used by the IIS APIs.
 * Renamed all IIS `Path` parameters which represented virtual paths to `VirtualPath` (with backwards-compatible aliases):
    * [Disable-IisSecurityAuthentication](http://get-carbon.org/help/Disable-IisSecurityAuthentication.html]
    * [Enable-IisDirectoryBrowsing](http://get-carbon.org/help/Enable-IisDirectoryBrowsing.html]
    * [Enable-IisSecurityAuthentication](http://get-carbon.org/help/Enable-IisSecurityAuthentication.html]
    * [Enable-IisSsl](http://get-carbon.org/help/Enable-IisSsl.html]
    * [Get-IisApplication](http://get-carbon.org/help/Get-IisApplication.html]
    * [Get-IisConfigurationSection](http://get-carbon.org/help/Get-IisConfigurationSection.html]
    * [Get-IisHttpHeader](http://get-carbon.org/help/Get-IisHttpHeader.html]
    * [Get-IisHttpRedirect](http://get-carbon.org/help/Get-IisHttpRedirect.html]
    * [Get-IisMimeMap](http://get-carbon.org/help/Get-IisMimeMap.html]
    * [Get-IisSecurityAuthentication](http://get-carbon.org/help/Get-IisSecurityAuthentication.html]
    * [Set-IisHttpHeader](http://get-carbon.org/help/Set-IisHttpHeader.html]
    * [Set-IisHttpRedirect](http://get-carbon.org/help/Set-IisHttpRedirect.html]
    * [Set-IisWindowsAuthentication](http://get-carbon.org/help/Set-IisWindowsAuthentication.html]